--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "react-dnd": "^11.1.3",
     "react-dnd-html5-backend": "^11.1.3",
     "react-dom": "^17.0.1",
+    "react-markdown": "^7.0.1",
     "react-scripts": "3.4.1",
     "react-spring": "^8.0.27",
     "react-three-fiber": "^5.3.1",
+    "remark-gfm": "^2.0.0",
     "sass": "^1.29.0",
     "three": "^0.122.0",
     "use-immer": "^0.4.2",
